# smartjoin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
alchemia_challenge_datasets/: README.md
alchemia_challenge_datasets/01_ecom_traps/: README.md  customers.csv  manifest.json  order_promotions.csv  orders.csv  payments.csv  products.csv  promotions.xlsx  refunds.csv
alchemia_challenge_datasets/02_date_dim_legit/: README.md  daily_sales.csv  dim_date.csv  manifest.json  promotions.csv
alchemia_challenge_datasets/03_health_composite_codes/: README.md  diagnoses.csv  icd10_dim.csv  manifest.json  patients.csv  visits.csv
alchemia_challenge_datasets/04_saas_ambiguity/: README.md  accounts.csv  contacts.csv  manifest.json  subscriptions.csv
scripts/: generate_alchemia_health_testdata.py  generate_alchemia_saas_testdata.py  generate_alchemia_testdata.py  generate_perf_suite.py  generate_smartjoin_derived_challenge_suite.py  generate_smartjoin_health_testdata.py  generate_smartjoin_saas_testdata.py  generate_smartjoin_testdata.py
scripts/test_datasets/: README.md  __init__.py  run.py
scripts/test_datasets/common/: __init__.py  constants.py  formats.py  helpers.py  manifest.py
scripts/test_datasets/domains/: __init__.py  derived.py  health.py  retail.py  saas.py
src/alchemia/: __init__.py  analysis.py  cli.py  config.py  debug_site.py  graphing.py  models.py
src/alchemia/exporters/: sql.py
src/alchemia/ingestion/: __init__.py  loaders.py
src/alchemia/joins/: __init__.py  discovery.py  signatures.py
src/alchemia/keys/: discovery.py
src/alchemia/profiling/: profiler.py
src/alchemia/semantics/: plugin.py
src/smartjoin/: __init__.py  analysis.py  cli.py  config.py  debug_site.py  explorer.py  graphing.py  models.py
src/smartjoin/exporters/: __init__.py  sql.py
src/smartjoin/ingestion/: loaders.py
src/smartjoin/joins/: derived.py  discovery.py  signatures.py
src/smartjoin/keys/: __init__.py  discovery.py
src/smartjoin/profiling/: __init__.py  profiler.py
src/smartjoin/semantics/: __init__.py  plugin.py
tests/: test_analysis_settings.py  test_blended_derived_keys.py  test_cli_generate_test_datasets.py  test_cli_run.py  test_confidence_retention.py  test_debug_site.py  test_derived_joins.py  test_derived_prefix_detection.py  test_derived_transform_description.py  test_explorer.py  test_graph.py  test_health_generator_manifest.py  test_ingestion_formats.py  test_join_competition_pruning.py  test_join_signatures.py  test_joins.py  test_keys_and_export.py  test_no_hardcoded_dataset_logic.py  test_profiling.py  test_saas_generator_manifest.py  test_test_datasets_run_cli.py  test_testdata_generator_manifest.py
